# birthday-wisher

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pants.toml  pyproject.toml
.github/workflows/: ci.yml  coc.yml
birthday_wisher/: BUILD.pants  __init__.py  celebrant.py  function.py  notifier.py  secrets.py  user.py  wisher.py
build_support/python/: coverage.ini  isort.cfg  pylint.ini
tests/: test_birthday_wisher.py  test_notifier.py  test_secrets.py  test_user.py  test_wisher.py
